# Renderel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Test.cpp  Test.hpp  build.bat  build.sh  clean.bat  compile_commands.json  run
include/: Camera.hpp  Debug.hpp  EventHandler.hpp  GUI.hpp  GameEventHandler.hpp  GlobalGLFWEventHandler.hpp  ImGUI.hpp  Input.hpp  InputControl.hpp  Transform.hpp  Window.hpp  WindowGLFW.hpp
include/core/: Common.hpp
include/ecs/: ECS.hpp  ECSComponent.hpp  ECSSystem.hpp
include/graphics/: BasicRenderer.hpp  Cubemap.hpp  IndexBuffer.hpp  Mesh.hpp  OBJLoader.hpp  OpenGLRenderer.hpp  OpenGLTexture.hpp  Renderable.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  Vertex.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.hpp
include/math/: EulerAngle.hpp  Mat4.hpp  Math.hpp  Quaternion.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
include/test/: Test.hpp  TestCamera.hpp  TestClearColor.hpp  TestECS.hpp  TestFaceCulling.hpp  TestInput.hpp  TestMenu.hpp  TestOBJLoader.hpp  TestSkybox.hpp  TestTexturedCube.hpp  TestTriangleColor.hpp
shaders/: cubemap.frag  cubemap.vert  fragmentShader.glsl  fragmentShaderBasic2D.glsl  fragmentShaderTexture.glsl  normalShader.frag  normalShader.vert  vertexShader.glsl  vertexShaderBasic2D.glsl  vertexShaderColor.glsl
src/: Debug.cpp  GameEventHandler.cpp  GlobalGLFWEventHandler.cpp  ImGUI.cpp  Window.cpp  WindowGLFW.cpp  main.cpp
src/ecs/: ECS.cpp  ECSComponent.cpp  ECSSystem.cpp
src/graphics/: BasicRenderer.cpp  Cubemap.cpp  Debug.cpp  IndexBuffer.cpp  OBJLoader.cpp  OpenGLRenderer.cpp  OpenGLTexture.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  Window.cpp
src/math/: Vec2.cpp
src/test/: Test.cpp  TestCamera.cpp  TestClearColor.cpp  TestECS.cpp  TestFaceCulling.cpp  TestInput.cpp  TestMenu.cpp  TestOBJLoader.cpp  TestSkybox.cpp  TestTexturedCube.cpp  TestTriangleColor.cpp
